--- a/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-condition/sw-flow-sequence-condition.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-flow/component/sw-flow-sequence-condition/sw-flow-sequence-condition.html.twig
@@ -154,9 +154,15 @@
             <div class="sw-flow-sequence-condition__header">
                 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                 {% block sw_flow_sequence_condition_title %}
-                <h3 class="sw-flow-sequence-condition__title">
-                    {{ $tc('sw-flow.detail.sequence.conditionTitle') }}
-                </h3>
+                <div class="sw-flow-sequence-condition__title-description">
+                    <h3 class="sw-flow-sequence-condition__title">
+                        {{ $tc('sw-flow.detail.sequence.conditionTitle') }}
+                    </h3>
+
+                    <p class="sw-flow-sequence-condition__description">
+                        {{ $tc('sw-flow.detail.sequence.conditionDescription') }}
+                    </p>
+                </div>
                 {% endblock %}
 
                 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
@@ -288,83 +294,59 @@
                 {% block sw_flow_sequence_condition_content_custom %}
                 {% endblock %}
 
+                {# @major-deprecated tag:v6.5.0 - block will be removed #}
                 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
                 {% block sw_flow_sequence_condition_add_rule %}
+
+                {# @major-deprecated tag:v6.5.0 - block will be removed #}
+                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                {% block sw_flow_sequence_condition_add_button %}
+                {# @major-deprecated tag:v6.5.0 - block will be removed #}
+                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                {% block sw_flow_sequence_condition_add_icon %}
+                {% endblock %}
+                {% endblock %}
+
+                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                {% block sw_flow_sequence_condition_rule_selection %}
                 <div
                     v-if="showRuleSelection || !sequence.ruleId"
-                    class="sw-flow-sequence-condition__add-rule"
+                    class="sw-flow-sequence-condition__select"
                 >
-                    <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                    {% block sw_flow_sequence_condition_add_button %}
-                    <!-- eslint-disable-next-line vuejs-accessibility/click-events-have-key-events -->
-                    <a
-                        v-if="showAddButton"
-                        class="sw-flow-sequence-condition__add-button"
-                        @click="toggleAddButton"
+                    <sw-entity-single-select
+                        class="sw-flow-sequence-condition__selection-rule"
+                        size="small"
+                        value=""
+                        entity="rule"
+                        :criteria="ruleCriteria"
+                        :placeholder="$tc('sw-flow.rule.placeholderSelectRule')"
+                        :disabled="disabled"
+                        :error="fieldError"
+                        advanced-selection-component="sw-advanced-selection-rule"
+                        :advanced-selection-parameters="advanceSelectionParameters"
+                        @change="(id, rule) => onRuleChange(rule)"
                     >
-                        <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                        {% block sw_flow_sequence_condition_add_icon %}
-                        <div class="sw-flow-sequence-condition__add-icon">
-                            <sw-icon
-                                size="10px"
-                                color="#fff"
-                                name="regular-plus-xxs"
-                            />
-                        </div>
-                        {% endblock %}
+                        <template #before-item-list>
+                            <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
+                            {% block sw_flow_sequence_condition_select_selection_before_list %}
+                            <ul class="sw-select-result__item-list">
+                                <!-- eslint-disable-next-line vuejs-accessibility/click-events-have-key-events -->
+                                <li
+                                    class="sw-select-result sw-select-result__create-new-rule"
+                                    @click="onCreateNewRule"
+                                >
+                                    {{ $tc('sw-flow.rule.createNewRule') }}
+                                </li>
+                            </ul>
+                            {% endblock %}
+                        </template>
 
-                        <p>{{ $tc('sw-flow.rule.addRule') }}</p>
-                    </a>
-                    {% endblock %}
-
-                    <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                    {% block sw_flow_sequence_condition_rule_selection %}
-                    <div
-                        v-if="!showAddButton"
-                        class="sw-flow-sequence-condition__select"
-                    >
-                        <sw-icon
-                            size="12px"
-                            color="#758ca3"
-                            name="regular-times-circle-s"
-                            @click="toggleAddButton"
-                        />
-
-                        <sw-entity-single-select
-                            class="sw-flow-sequence-condition__selection-rule"
-                            size="small"
-                            value=""
-                            entity="rule"
-                            :criteria="ruleCriteria"
-                            :placeholder="$tc('sw-flow.rule.placeholderSelectRule')"
-                            :disabled="disabled"
-                            :error="fieldError"
-                            advanced-selection-component="sw-advanced-selection-rule"
-                            :advanced-selection-parameters="advanceSelectionParameters"
-                            @change="(id, rule) => onRuleChange(rule)"
-                        >
-                            <template #before-item-list>
-                                <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
-                                {% block sw_flow_sequence_condition_select_selection_before_list %}
-                                <ul class="sw-select-result__item-list">
-                                    <!-- eslint-disable-next-line vuejs-accessibility/click-events-have-key-events -->
-                                    <li
-                                        class="sw-select-result sw-select-result__create-new-rule"
-                                        @click="onCreateNewRule"
-                                    >
-                                        {{ $tc('sw-flow.rule.createNewRule') }}
-                                    </li>
-                                </ul>
-                                {% endblock %}
-                            </template>
-
-                            <template #result-label-property="{ item, labelProperty, getKey }">
-                                {{ getKey(item, labelProperty) }}
-                            </template>
-                        </sw-entity-single-select>
-                    </div>
-                    {% endblock %}
+                        <template #result-label-property="{ item, labelProperty, getKey }">
+                            {{ getKey(item, labelProperty) }}
+                        </template>
+                    </sw-entity-single-select>
                 </div>
+                {% endblock %}
                 {% endblock %}
             </div>
             {% endblock %}
